# Processing

./: .gitignore  README.md  processing.exe.lnk  pyproject.toml
BallDropping/: Ball.pde  BallDropping.pde  Line.pde  ball.py  line.py  main.py
BarnsleyFern/: BarnsleyFern.pyde  main.py
ButterflyCurve/: ButterflyCurve.pde  main.py
ChaosGame/: ChaosGame.pyde  main.py
Coding Challenges/C01_StarField/: Star.pde
Coding Challenges/C03_SnakeGame/: C03_SnakeGame.pde
Coding Challenges/C04_PurpleRain/: C04_PurpleRain.pde
Coding Challenges/C11_TerrainGeneration/: C11_TerrainGeneration.pde
CollatzConjecture/: CollatzConjecture.pde  Node.pde  Tree.pde  main.py  node.py  tree.py
Cycloid/: Circle.pde  Cycloid.pde  circle.py  main.py
DrawCircle/: DrawCircle.pyde  main.py
FunctionPlotter/: FunctionPlotter.pde  main.py
Infinity/: Infinity.pyde  main.py
LSystems/: DragonCurve.pde  FractalPlant.pde  FractalTree.pde  HexagonalGosper.pde  KochCurve.pde  LSystem.pde  LSystems.pde  PenroseTiling.pde  SierpinskiCurve.pde  SierpinskiTriangle.pde  dragon_curve.py  fractal_plant.py  fractal_tree.py  hexagonal_gosper.py  koch_curve.py  lsystem.py  main.py  penrose_tiling.py  sierpinski_curve.py  sierpinski_triangle.py
LightningBFS/: LightningBFS.pyde  main.py
MatrixRain/: Column.pde  MatrixRain.pde  Symbol.pde  column.py  main.py  symbol.py
RegularNGon/: RegularNGon.pyde  main.py
SpiralTurtleGraphics/: SpiralTurtleGraphics.pde  main.py
TrigFunctions/: TrigFunctions.pyde  main.py
VisualTimestables/: VisualTimestables.pde  main.py
(+176 files in other folders)
